# rate-limiter

./: README.md  pyproject.toml  rate_limiter_fixed_window.py
app/: main.py  rate_limiter.py
app/api/v1/dependencies/: rate_limiter_dependency.py
app/api/v1/routes/: resource.py
app/core/: rate_limiter.py
docs/: Take Home Assignemnt.docx
tests/: conftest.py  test_api_ping.py  test_rate_limiter.py
